--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 :root{
+  --primary-color: hsl(170, 100%, 26%);
+  --headline: hsl(210, 11%, 15%);
+  --paragraph: hsl(210, 9%, 31%);
+
   font-size: 62.5%; /* 1rem = 10px */
 }
 
@@ -13,8 +17,10 @@ h4{
 
 h1{
   font-size: 3.4rem;
+  line-height: 130%;
 }
 
 p{
   font-size: 1.8rem;
+  line-height: 150%;
 }
