--- a/css/styles.css
+++ b/css/styles.css
@@ -9,18 +9,22 @@
 body{
   font-family: 'DM Sans';
   font-size: 1.6rem;
+  text-align: center;
 }
 
 h4{
   font-size: 1.4rem;
+  color: var(--primary-color);
 }
 
 h1{
   font-size: 3.4rem;
   line-height: 130%;
+  color: var(--headline);
 }
 
 p{
   font-size: 1.8rem;
   line-height: 150%;
+  color: var(--paragraph)
 }
