--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
+*{
+  margin: 0;
+  box-sizing: border-box;
+}
+
 :root{
   --primary-color: hsl(170, 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
+  --white: #fff;
 
   font-size: 62.5%; /* 1rem = 10px */
 }
@@ -12,19 +18,49 @@ body{
   text-align: center;
 }
 
+header{
+  width: 37.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4.1rem;
+}
+
 h4{
   font-size: 1.4rem;
   color: var(--primary-color);
+  margin-bottom: 1.6rem;
 }
 
 h1{
   font-size: 3.4rem;
   line-height: 130%;
   color: var(--headline);
+  margin-bottom: 2.4rem;
 }
 
 p{
   font-size: 1.8rem;
   line-height: 150%;
-  color: var(--paragraph)
+  font-weight: 400;
+  color: var(--paragraph);
+  margin-bottom: 3.2rem;
+}
+
+button{
+  background: var(--primary-color);
+  border: none;
+  border-radius: 4rem;
+  margin-bottom: 6rem;
+  width: 26.3rem;
+  height: 6.2rem;
+  color: var(--white);
+  font-size: 1.4rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.6rem;
+  margin-left: auto;
+  margin-right: auto;
 }
