Added beige color

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --primary-color: hsl(170, 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
+  --brand-beige: hsla(39, 100%, 97%);
   --white: #fff;
 
   font-size: 62.5%; /* 1rem = 10px */
