--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,8 @@
   --primary-color: hsl(170, 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
-  --brand-beige: hsla(39, 100%, 97%);
+  --brand-beige: hsl(39, 100%, 97%);
+  --brand-green-light: #DCE9E2;
   --white: #fff;
 
   font-size: 62.5%; /* 1rem = 10px */
@@ -64,4 +65,37 @@ button{
   gap: 1.6rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+.stats{
+  width: 32.7rem;
+  height: 47rem;
+  padding-block: 4rem;
+  margin-inline: auto;
+  background-color: var(--brand-beige);
+  border: 1px solid var(--brand-green-light);
+  border-radius: 0.6rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6rem;
+}
+
+.stat h3{
+  font-size: 4.8rem;
+  color: var(--headline);
+  line-height: 130%;
+  margin-bottom: 0.4rem;
+}
+
+.stat p{
+  margin: 0;
+  color: var(--primary-color);
+}
+
+.woman{
+  width: 26.4rem;
+  display: block;
+  margin-inline: auto;
+  object-position: 0 2rem;
 }
