--- a/css/styles.css
+++ b/css/styles.css
@@ -99,3 +99,15 @@ button{
   margin-inline: auto;
   object-position: 0 2rem;
 }
+
+header::before{
+  content: "";
+  width: 100vh;
+  height: 108rem;
+  background-color: var(--brand-green-light);
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
